--- a/desk_newest_component/src/main/res/layout/footer_nomore.xml
+++ b/desk_newest_component/src/main/res/layout/footer_nomore.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="48dp"
     android:orientation="vertical">
 
-    <include layout="@layout/base_title" />
-
-    <com.androiddesk.base.component.widget.swiperecycler.SwipeRefreshRecyclerView
-        android:id="@+id/recyclerView"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white" />
+        android:gravity="center"
+        android:textColor="#9f9997"
+        android:text="已经到底了哟 (´・ω・`)"/>
 
 </LinearLayout>
