分类界面填充数据

--- a/desk_category_component/src/main/res/layout/fragment_category.xml
+++ b/desk_category_component/src/main/res/layout/fragment_category.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <include layout="@layout/base_title" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="分类"
-        android:textSize="@dimen/sp_30" />
+        android:background="@color/white" />
 
 </LinearLayout>
