--- a/desk_detail_component/src/main/res/layout/header_detail.xml
+++ b/desk_detail_component/src/main/res/layout/header_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -44,10 +43,9 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <com.androiddesk.base.component.widget.RatioImageView
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        app:width_height_radio="2.5" />
+        android:layout_height="@dimen/dp_750"
+        android:scaleType="fitXY" />
 
 </LinearLayout>
